<resources>
    <string name="app_name">RecAnything</string>
    <string name="empty_records">You don\'t have any recordings yet. Tap the button below to start recording.</string>
    <string name="default_category_name1">My recordings</string>
    <string name="default_category_description1">no description</string>
    <string name="default_category_name2">Favorites</string>
    <string name="default_category_description2">my best recordings</string>
    <string name="default_category_name3">Business</string>
    <string name="default_category_description3">all of my meetings</string>
    <string name="button_cancel">cancel</string>
    <string name="apply">apply</string>
    <string name="delete_record_dialog_message">The recording and all attachments will be deleted. This cannot be undone. Are you sure that you want to delete this record?</string>
    <string name="delete_category_dialog_message">The category will be deleted. This cannot be undone. Are you sure that you want to delete this category?</string>
    <string name="delete_confirm">Yes, delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="create">create</string>
    <string name="new_painting">New painting</string>
    <string name="action_save">save</string>
    <string name="save_painting_error_title">Sorry</string>
    <string name="save_painting_error_message">Something went wrong when trying to save the painting.</string>
    <string name="painting_color">color</string>
    <string name="painting_thickness">thickness</string>
    <string name="painting_undo">undo</string>
    <string name="painting_clear">clear</string>
    <string name="categories_manage">Manage categories</string>
    <string name="edit_category">Edit category</string>
    <string name="create_category_error">Could not create category. Something went wrong.</string>
    <string name="edit_category_error">Could not update category. Something went wrong</string>
    <string name="delete_default_category">The default-category cannot be deleted</string>
    <string name="delete_category_error_exists">Cannot delete category when having recordings in this category</string>
    <string name="delete_category_default_error">Unknown error deleting this category</string>
    <string name="category_deleted">Category deleted</string>
    <string name="progressdialog_delete_in_progress">delete in progress...</string>
    <string name="trim_to_selection">trim to selection</string>
    <string name="cut_and_trim">Cut and Trim</string>
    <string name="cut_and_trim_error_message">Something went wrong. The recording does not exist or cannot be trimmed.</string>
    <string name="cut_and_trim_trimming">Trimming...</string>
    <string name="cut_and_trim_message">Select a range you want to keep of the audiofile. You can prelisten to the selection before trimming the audiofile.</string>
    <string name="cut_and_trim_progress">Progress</string>
    <string name="cut_and_trim_prelisten">Prelisten to the selection:</string>
    <string name="silence_indicator_text">skipping silence</string>
    <string name="seek_limit_reached_indicator_text">no more seeking possible</string>
    <string name="player_error">The record couldn\'t be loaded.</string>
    <string name="contentmenu_header_actions">Actions</string>
    <string name="contextmenu_action_rename">rename</string>
    <string name="contextmenu_action_recategory">change category</string>
    <string name="contextmenu_action_cut">cut &amp; trim</string>
    <string name="contextmenu_action_delete">delete</string>
    <string name="contextmenu_action_more">more...</string>
    <string name="contextmenu_header_share">Share</string>
    <string name="contextmenu_action_share">send to</string>
    <string name="contextmenu_action_externalplayer">open in external player</string>
    <string name="contextmenu_header_attachments">Add attachments</string>
    <string name="contextmenu_action_photo">take photo</string>
    <string name="contextmenu_action_note">note</string>
    <string name="contextmenu_action_painting">drawing</string>
    <string name="no_camera_found">Your device seems to have no camera</string>
    <string name="photo_added">The taken photo has been attached</string>
    <string name="photo_add_failed">Something went wrong when trying to attach the photo</string>
    <string name="painting_add_failed">Something went wrong when trying to attach the painting</string>
    <string name="painting_added">The painting has been attached</string>
    <string name="title">Title</string>
    <string name="dialog_rename_title">Rename</string>
    <string name="dialog_recategory_title">Select category</string>
    <string name="contextmenu_action_gallery">pick photo</string>
    <string name="pickphoto_error">Something went wrong when trying to attach the picked photo.</string>
    <string name="note_error">There was a problem attaching the note.</string>
    <string name="note_edit_error">There was a problem editing the note.</string>
    <string name="note_delete_error">There was a problem deleting the note.</string>
    <string name="dialog_note_title">New note</string>
    <string name="note">Note</string>
    <string name="dialog_thickness_title">Select thickness</string>
    <string name="dialog_category_create_title">Create category</string>
    <string name="category_title">Name</string>
    <string name="category_description">Description</string>
    <string name="category_icon">Icon</string>
    <string name="settings_quality">Quality</string>
    <string name="action_search">Search</string>
    <string name="action_close">Close app</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_sub_recorder">Recorder</string>
    <string name="settings_sub_interface">Interface</string>
    <string name="settings_sub_general">General</string>
    <string name="contact">Contact</string>
    <string name="contact_summary">Write us a message</string>
    <string name="about">About</string>
    <string name="about_summary">version and lincenses</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="information">Information</string>
    <string name="settings_title_echocanceling">Filter echo</string>
    <string name="settings_title_backgroundnoise">Filter background noise</string>
    <string name="settings_summary_backgroundnoise">reduces background noise when recording</string>
    <string name="settings_summary_echocanceling">removes echo when recording</string>
    <string name="settings_summary_samplerate">a higher samplerate results in a better quality but larger files</string>
    <string name="settings_title_samplerate">Samplerate</string>
    <string name="settings_title_source">Microphone</string>
    <string name="settings_summary_source">the source of which the audio is retreived from</string>
    <string name="settings_title_autogain">Autogain</string>
    <string name="settings_summary_autogain">normalizes the output of the captured signal by boosting or lowering input from the microphone</string>
    <string name="settings_title_gainvalue">Gainvalue</string>
    <string name="settings_summary_gainvalue">Increases the volume of the audiosignal when recording</string>
    <string name="settings_title_seekvalue">Rewind seconds</string>
    <string name="settings_summary_seekvalue">the amount of seconds which shall be seeked back each step</string>
    <string name="settings_title_detectsilencevalue">Detect Silence delay</string>
    <string name="settings_summary_detectsilencevalue">the amount of seconds in silence after which the recording shall pause automatically</string>
    <string name="settings_summary_detectsilence">detects silent parts when recording and automatically skips these parts</string>
    <string name="settings_title_detectsilence">Skip silence</string>
    <string name="settings_title_seeking">Rewind with volume keys</string>
    <string name="settings_summary_seeking">pressing your volume down button when recording will discard the last few recorded seconds</string>
    <string name="skip_silence">Skip silence</string>
    <string name="seeking">Seeking</string>
    <string name="settings_filter">Filter</string>
    <string name="settings_summary_detectsilencegate">the gate in dB at which silence is detected</string>
    <string name="settings_title_detectsilencegate">Gate</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_group_name_asc">▲ Name</string>
    <string name="action_sort_group_name_desc">▼ Name</string>
    <string name="action_sort_group_time_desc">▼ Created</string>
    <string name="action_sort_group_time_asc">▲ Created</string>
    <string name="settings_summary_silentnotifications">turns your device into the silent mode while recording</string>
    <string name="settings_title_silentnotifications">Disable notifications</string>
    <string name="path_title">Storage path</string>
    <string name="path_summary">set the path where the recordings shall be saved</string>
    <string name="settings_summary_defaultfilename">the naming convention for a newly recorded recording</string>
    <string name="settings_title_defaultfilename">Default filename</string>
    <string name="settings_summary_recorder">choose between wav, mp3, aac and 3gpp</string>
    <string name="settings_title_recorder">Audioformat</string>
    <string name="settings_player">Player</string>
    <string name="settings_summary_autoplay">starts playback directly when player opens</string>
    <string name="settings_title_autoplay">Autoplay</string>
    <string name="settings_summary_rewindseconds">the seconds to rewind or fast forward</string>
    <string name="settings_title_rewindseconds">Rewind and fast forward</string>
    <string name="action_filter">Filter by categories</string>
    <string name="settings_dialogs">Dialogs</string>
    <string name="settings_title_quickrenaming">Quick renaming</string>
    <string name="settings_summary_quickrenaming">opens a dialog to rename a recording just after stopping</string>
    <string name="settings_summary_confirmabort">shows a confirmation dialog to prevent misclicks</string>
    <string name="settings_title_confirmabort">Confirm abort</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_title_telephone">Telephone</string>
    <string name="settings_summary_low_battery">automatically stops a recording when your batterylevel becomes equal to 5%</string>
    <string name="settings_title_low_battery">Stop on low battery</string>
    <string name="settings_sub_cloud">Clouds</string>
    <string name="settings_summary_automaticupload">automatically uploads a recording into the connected clouds as soon as it was finished</string>
    <string name="settings_title_automaticupload">Upload automatically</string>
    <string name="account_dropbox_title">Log in to Dropbox</string>
    <string name="account_dropbox_summary">link your account to enable uploading recordings to dropbox</string>
    <string name="behavior">Upload behavior</string>
    <string name="clouds">Available clouds</string>
    <string name="settings_title_defaultplayer">Use internal player as default</string>
    <string name="settings_summary_defaultplayer">when selected, recordings are played with help of the internal player. Otherwise, an external player is used.</string>
    <string name="settings_title_keepscreenon">Keep screen on</string>
    <string name="settings_summary_keepscreenon">prevent the screen from turning itself off while recording</string>
    <string name="settings_summary_mediastore">adds a recording after finish to your device\'s mediastore to make it visible for other apps</string>
    <string name="settings_title_mediastore">Add to mediastore</string>
    <string name="wifi_transfer">WiFi Transfer</string>
</resources>