<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter" />

    <item
        android:orderInCategory="100"
        android:title="@string/action_sort">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_sort_group_name_asc"
                    android:title="@string/action_sort_group_name_asc" />

                <item
                    android:id="@+id/action_sort_group_name_desc"
                    android:title="@string/action_sort_group_name_desc" />

                <item
                    android:id="@+id/action_sort_group_time_asc"
                    android:title="@string/action_sort_group_time_asc" />

                <item
                    android:id="@+id/action_sort_group_time_desc"
                    android:title="@string/action_sort_group_time_desc" />

            </group>
        </menu>

    </item>

    <item
        android:id="@+id/action_wifitransfer"
        android:orderInCategory="100"
        android:title="@string/wifi_transfer" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close" />

</menu>
