<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/dialog_category_create_title"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:text="@string/category_icon"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:fadeScrollbars="false"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarSize="@dimen/scrollbar_size"
            android:scrollbarThumbHorizontal="@drawable/background_scrollview_scrollbarstyle_horizontal_icons"
            android:scrollbars="horizontal" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/padding_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:text="@string/category_title"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_dialog_content"
            android:layout_marginRight="@dimen/padding_dialog_content"
            android:hint="@string/category_title"
            android:maxLines="1"
            android:theme="@style/EditTextStyle" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/padding_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:text="@string/category_description"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_dialog_content"
            android:layout_marginRight="@dimen/padding_dialog_content"
            android:gravity="top"
            android:hint="@string/category_description"
            android:lines="3"
            android:maxLines="3"
            android:theme="@style/EditTextStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small">

            <Button
                android:id="@+id/buttonCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/button_cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_dialog_button" />

            <Button
                android:id="@+id/buttonCreate"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/create"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_dialog_button" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
